/*
 * Teragrep Buffer Library for Java
 * Copyright (C) 2026 Suomen Kanuuna Oy
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 *
 *
 * Additional permission under GNU Affero General Public License version 3
 * section 7
 *
 * If you modify this Program, or any covered work, by linking or combining it
 * with other code, such other code is not for that reason alone subject to any
 * of the requirements of the GNU Affero GPL version 3 as long as this Program
 * is the same Program as licensed from Suomen Kanuuna Oy without any additional
 * modifications.
 *
 * Supplemented terms under GNU Affero General Public License version 3
 * section 7
 *
 * Origin of the software must be attributed to Suomen Kanuuna Oy. Any modified
 * versions must be marked as "Modified version of" The Program.
 *
 * Names of the licensors and authors may not be used for publicity purposes.
 *
 * No rights are granted for use of trade names, trademarks, or service marks
 * which are in The Program if any.
 *
 * Licensee must indemnify licensors and authors for any liability that these
 * contractual assumptions impose on licensors and authors.
 *
 * To the extent this program is licensed as part of the Commercial versions of
 * Teragrep, the applicable Commercial License may apply to this file if you as
 * a licensee so wish it.
 */
package com.teragrep.buf_01.buffer.lease;

import com.teragrep.stb_01.Stubable;

// spotless:off
/**
 * @interface Lease
 * @brief Contains reference tracking and slicing functionality for the type T encapsulated object.
 * @responsibilities
 * - Reference tracking
 * - Provides access to encapsulated leased object
 * - Zero references removes access to leased object
 * @collaborators
 * - Pool
 * - MemorySegmentContainer
 * @startuml
 * interface Pool
 * interface Lease {
 * + id();
 * + refs();
 * + leasedObject();
 * + hasZeroRefs();
 * + sliceAt(offset);
 * + sliceBetween(offset, length);
 * }
 * Lease --> Pool : returned lease
 * Lease --> MemorySegmentContainer : reference tracked access
 * note right of Lease
 * Responsibilities:
 * - Reference tracking
 * - Provides access to encapsulated leased object
 * - Zero references removes access to leased object
 * Collaborators:
 * - Pool
 * - MemorySegmentContainer
 * end note
 * @enduml
 */
// spotless:on
public interface Lease<T> extends AutoCloseable, Stubable {

    /**
     * @return id of the leased object
     */
    public abstract long id();

    /**
     * @return current reference count
     */
    public abstract long refs();

    /**
     * @return encapsulated leased object
     */
    public abstract T leasedObject();

    /**
     * @return status of the lease, {@code true} indicates that the lease has expired.
     */
    public abstract boolean hasZeroRefs();

    /**
     * Provides a slice from the offset to the end of the segment. Registered as a sub lease.
     * 
     * @param offset start offset
     * @return slice of the lease, registered as a sublease.
     */
    public abstract Lease<T> sliceAt(long offset);

    /**
     * Provides a slice from the given offset for the length given. Registered as a sub lease.
     * 
     * @param offset start offset
     * @param length length from start offset
     * @return slice of the lease, registered as a sublease.
     */
    public abstract Lease<T> sliceWithLength(long offset, long length);

    @Override
    public abstract void close();
}
